feat(app): register all blueprints
