# application/bookshop_app/controllers/booking.py
@@ -1,8 +1,8 @@
 """Booking controller"""
 from flask import Response
 
-from bookshop_app.services.authentication import auth
 from bookshop_app.models.role import UserRole
+from bookshop_app.services.authentication import auth
 from bookshop_app.services.booking import BookingService
 
 
